# qa-portfolio-v2

./: .gitignore  conftest.py  pyproject.toml
locators/: elements_page_locators.py
pages/: base_page.py  elements_page.py
tests/: test_elements_page.py
