[tool.poetry]
name = "qa-portfolio-v2"
version = "0.1.0"
description = "UI autotests with Selenium and Pytest"
authors = ["Karimov <karimov.dev0@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.43.0"
pytest = "^9.0.3"
webdriver-manager = "^4.0.2"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"